Change fortune rune's description